--- a/data/resources/ui/window.ui
+++ b/data/resources/ui/window.ui
@@ -122,6 +122,7 @@
                                 <property name="maximum-size">50</property>
                                 <property name="child">
                                   <object class="GtkButton">
+                                    <property name="tooltip-text" translatable="yes" context="Tooltip of the palette button">Open Palette Window</property>
                                     <property name="margin-top">12</property>
                                     <property name="margin-start">12</property>
                                     <property name="margin-end">12</property>
