fix: hide list seperator
Closes #42, the seperator was visible when the list was hidden

--- a/data/resources/ui/window.ui
+++ b/data/resources/ui/window.ui
@@ -213,7 +213,11 @@
                           </object>
                         </child>
                         <child>
-                          <object class="GtkSeparator"></object>
+                          <object class="GtkSeparator">
+                            <binding name="visible">
+                              <lookup name="visible" type="GtkListBox">history_list</lookup>
+                            </binding>
+                          </object>
                         </child>
                         <child>
                           <object class="GtkScrolledWindow">
