--- a/data/resources/ui/window.ui
+++ b/data/resources/ui/window.ui
@@ -132,7 +132,7 @@
                                     <property name="vexpand">True</property>
                                     <property name="width-request">267</property>
                                     <child>
-                                      <object class="GtkColorButton" id="color_button">
+                                      <object class="GtkColorDialogButton" id="color_button">
                                         <property name="can_focus">False</property>
                                       </object>
                                     </child>
