feat(parser): add cmyk parser

--- a/data/resources/ui/window.ui
+++ b/data/resources/ui/window.ui
@@ -178,6 +178,7 @@
                             </child>
                             <child>
                               <object class="ColorFormatRow" id="cmyk_row">
+                                <property name="editable">True</property>
                                 <property name="tooltip" translatable="yes">Copy CMYK</property>
                               </object>
                             </child>
