feat(parser): add xyz parser

--- a/data/resources/ui/window.ui
+++ b/data/resources/ui/window.ui
@@ -184,6 +184,7 @@
                             </child>
                             <child>
                               <object class="ColorFormatRow" id="xyz_row">
+                                <property name="editable">True</property>
                                 <property name="tooltip" translatable="yes">Copy XYZ</property>
                                 <property name="visible">False</property>
                               </object>
